// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`char2pinyin_01 𠬠 1`] = `
Array [
  "mou3",
  "mou3",
  "mou3",
  "mou3",
]
`;

exports[`char2pinyin_01 𠮷 1`] = `
Array [
  "ji2",
  "ji2",
  "ji2",
  "chi2",
]
`;

exports[`char2pinyin_01 𡬶 1`] = `
Array [
  "xin2",
  "shin2",
  "syin2",
  "hsin2",
]
`;

exports[`char2pinyin_01 𢎐 1`] = `
Array [
  "shang4",
  "shang4",
  "shang4",
  "shang4",
]
`;

exports[`char2pinyin_01 𣛙 1`] = `
Array [
  "shuo4",
  "shuo4",
  "shwo4",
  "shuo4",
]
`;

exports[`char2pinyin_01 𫗭 1`] = `
Array [
  "wei4",
  "wei4",
  "wei4",
  "wei4",
]
`;

exports[`char2pinyin_02 𠬠 1`] = `
Array [
  "mǒu",
  "mǒu",
  "mǒu",
  "mou3",
]
`;

exports[`char2pinyin_02 𠮷 1`] = `
Array [
  "jí",
  "jí",
  "jí",
  "chi2",
]
`;

exports[`char2pinyin_02 𡬶 1`] = `
Array [
  "xín",
  "shīn",
  "syīn",
  "hsin2",
]
`;

exports[`char2pinyin_02 𢎐 1`] = `
Array [
  "shàng",
  "shàng",
  "shàng",
  "shang4",
]
`;

exports[`char2pinyin_02 𣛙 1`] = `
Array [
  "shuò",
  "shuò",
  "shwò",
  "shuo4",
]
`;

exports[`char2pinyin_02 𫗭 1`] = `
Array [
  "wèi",
  "wèi",
  "wèi",
  "wei4",
]
`;
